login and logout working

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,16 @@
 <div class="login-page">
-    <h1 class="title">Rosa's Envelopes for DrGluon</h1>
     <form class="login">
-        Hello, login coming soon.
-        <div class="users"></div>
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="login-username" />
+        </div>
+        <div>
+            <label for="username">Password:</label>
+            <input type="password" id="login-password" />
+        </div>
+        <div>
+            <button type="submit">Login</button>
+        </div>
     </form>
 </div>
 
