dashboard links to add and stream pages + add page displays form to add new envelope

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,15 @@
 <div class="dash-page">
     We are logged in.
 
+    <ul>
+        <li>
+            <a href="/add">Add Envelope Text</a>
+        </li>
+        <li>
+            <a href="/stream-control">Pick Envelopes</a>
+        </li>
+    </ul>
+
     <button id="logout">Logout</button>
 </div>
 
