--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
         </li>
     </ul>
 
-    <button id="logout">Logout</button>
+    <button id="logout" class="btn-link">Logout</button>
 </div>
 
 <script src="/assets/js/logout.js"></script>
