--- a/views/stream.handlebars
+++ b/views/stream.handlebars
@@ -1,3 +1,27 @@
-<div class="dash-page">
+<div class="dash-page {{#unless dashboardView}}green-screen{{/unless}}">
     This is the stream page
+    
+    {{#if dashboardView}}
+    <div>
+        <button class="btn-link" id="randomize-envelopes-btn">Randomize Envelopes</button>
+        <button class="btn-link" id="randomize-img-btn">Randomize Parcel Delivery Message</button>
+    </div>
+    {{/if}}
+
+    <!-- Envelopes -->
+    {{#unless parcelView}}
+    <div id="envelope-view">
+        Envelopes here!
+    </div>
+    {{/unless}}
+
+    <!-- Parcel Image -->
+    {{#unless envelopeView}}
+    <div id="parcel-view">
+        <img id="parcel-img" />
+    </div>
+    {{/unless}}
 </div>
+
+<script src="/assets/js/stream.js"></script>
+<script src="/assets/js/socket.js"></script>
