--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,16 @@
 <div class="dash-page">
-    We are logged in.
+    {{> header}}
 
-    <ul>
-        <li>
-            <a href="/add">Add Envelope Text</a>
-        </li>
-        <li>
-            <a href="/stream-control">Pick Envelopes</a>
-        </li>
-    </ul>
+    <div class="dash-links">
+        <a href="/add">
+            <i class="fa-solid fa-plus"></i>
+            Add Envelope Text
+        </a>
+        <a href="/stream-control">
+            <i class="fa-solid fa-envelope"></i>
+            Pick Envelopes
+        </a>
+    </div>
 
     <button id="logout" class="btn-link">Logout</button>
 </div>
