--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js'></script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Luckiest+Guy&family=Milonga&family=Lato&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src='https://kit.fontawesome.com/d6ff1e54be.js' crossorigin='anonymous'></script>
     <!-- Stylesheet -->
     <link rel='stylesheet' href='/assets/css/style.css' />
     <link rel='icon' href='/assets/images/fez.png' />
