--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
 <div class="login-page">
+    {{> header}}
     <form class="login">
         <div>
             <label for="username">Username:</label>
@@ -9,7 +10,7 @@
             <input type="password" id="login-password" />
         </div>
         <div>
-            <button type="submit">Login</button>
+            <button type="submit" class="btn-link">Login</button>
         </div>
     </form>
 </div>
