parcel delivery message animation

--- a/views/stream.handlebars
+++ b/views/stream.handlebars
@@ -10,14 +10,14 @@
     <!-- Envelopes -->
     {{#unless parcelView}}
     {{#if dashboardView}}<h2>Envelopes</h2>{{/if}}
-    <div id="envelope-view">
+    <div id="envelope-view" class="{{#if dashboardView}}dash-view{{/if}}">
     </div>
     {{/unless}}
 
     <!-- Parcel Image -->
     {{#unless envelopeView}}
     {{#if dashboardView}}<h2>Parcel Delivery Message</h2>{{/if}}
-    <div id="parcel-view">
+    <div id="parcel-view" class="{{#if dashboardView}}dash-view{{/if}}">
         <img id="parcel-img" />
     </div>
     {{/unless}}
