--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -177,11 +177,24 @@ ul.current-list li .envelope-text {
   background-color: var(--fez);
   color: var(--bg-color);
   padding: 3px 5px;
-  margin: 0 3px;
+  margin: 0  0 0 5px;
 }
 .delete-btn:hover {
   background-color: var(--fez-dark);
   color: var(--bg-color);
+}
+
+#parcel-img {
+  transform: scale(0);
+  transition: all 0.4s ease-in-out;
+}
+#parcel-img.show-img {
+  transform: scale(1);
+  transition: all 0.4s ease-in-out;
+}
+
+.dash-view {
+  transform: scale(.5);
 }
 
 input:focus {
