--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -21,7 +21,7 @@
             <ul class="current-list">
                 {{#each envelopes as |envelope|}}
                 <li>
-                    <div class="envelope-text">{{envelope.envelope_text}}</div>
+                    <div class="curr-envelope-text">{{envelope.envelope_text}}</div>
                     <div data-id="{{envelope.id}}" class="btn-link delete-btn">Delete</div>
                 </li>
                 {{/each}}
