--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <!-- Socket -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js'></script>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Luckiest+Guy&family=Milonga&family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Luckiest+Guy&family=Milonga&family=Lato&family=Indie+Flower&family=Nanum+Brush+Script&family=Square+Peg&display=swap&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src='https://kit.fontawesome.com/d6ff1e54be.js' crossorigin='anonymous'></script>
     <!-- Stylesheet -->
