--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -269,14 +269,6 @@ ul.current-list li .curr-envelope-text {
 }
 
 #envelope-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0; left: 0;
-  z-index: -1;
   flex-direction: column;
 }
 #envelope-content div {
@@ -287,13 +279,29 @@ ul.current-list li .curr-envelope-text {
   color: var(--dark);
   transform: scale(0);
   transition: all 0.4s ease-in-out;
-  width: 100%; max-width: 750px;
+  /* width: 100%; max-width: 750px;
+  position: absolute;
+  top: 0; left: 0;
+  margin: 0 auto; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0; left: 0;
+  z-index: -1;
 }
 #envelope-content .show-content {
   transform: scale(1);
   transition: all 0.4s ease-in-out;
-  position: relative;
   z-index: 1000;
+}
+
+#clear-envelope-btn {
+  position: absolute;
+  bottom: 20px; right: 20px;
+  z-index: 10000;
 }
 
 .indie-flower {
