--- a/views/stream.handlebars
+++ b/views/stream.handlebars
@@ -10,7 +10,7 @@
     <!-- Envelopes -->
     {{#unless parcelView}}
     {{#if dashboardView}}<h2>Envelopes</h2>{{/if}}
-    <div id="envelope-view" class="{{#if dashboardView}}dash-view{{/if}}">
+    <div id="envelope-view">
     </div>
     <div id="envelope-content">
     </div>
