less green hues, envelopes still work correctly when there are less than 3 submissions, and more instances of successful delivery

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -212,6 +212,7 @@ ul.current-list li .curr-envelope-text {
 
 #envelope-view {
   display: flex;
+  justify-content: center;
 }
 .envelope {
   background: transparent;
