--- a/views/stream.handlebars
+++ b/views/stream.handlebars
@@ -30,6 +30,7 @@
     {{/unless}}
 
     {{#if dashboardView}}
+    <button class="btn-link" id="change-page-btn" onclick="location.href='/add'">Go to "Add" Page</button>
     <div class="dash-clear-btns">
         <button class="btn-link" id="clear-envelope-btn">Close Envelope Letter</button>
     </div>
