--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,7 +32,7 @@ a,
 a:hover,
 .btn-link,
 .btn-link:hover {
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out, padding 0s, font 0s;
 }
 
 a {
@@ -155,6 +155,12 @@ h2 {
   color: var(--fez-dark);
 }
 
+.envelope-form {
+  margin: 0px;
+}
+.envelope-form.image-form {
+  margin-top: 30px;
+}
 
 .add-envelope input {
   font-family: 'Lato', Helvetica, Arial, sans-serif;
@@ -166,7 +172,22 @@ h2 {
   border: 1px solid #EEE;
   border-radius: 8px;
   width: calc(100% - 30px);
+  max-width: 600px;
+  position: relative;
 }
+.add-envelope.add-img input {
+  background-color: #fff;
+}
+.add-envelope.add-img input::before {
+  content: 'Choose File';
+  background-color: var(--fez);
+  position: absolute;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 4px;
+  top: 14px;
+}
+
 .current-envelopes {
   margin-top: 40px;
 }
@@ -311,11 +332,29 @@ ul.current-list li .curr-envelope-text {
   transition: all 0.4s ease-in-out;
   z-index: 1000;
 }
+#envelope-content img.envelope-img {
+  object-fit: contain;
+  max-width: 100%;
+  max-height: calc(100vh - 100px);
+  width: auto;
+  height: calc(100vh - 100px);
+}
 
 #clear-envelope-btn {
   position: absolute;
   bottom: 20px; right: 20px;
   z-index: 10000;
+}
+#change-page-btn {
+  position: fixed;
+  bottom: 20px; left: 20px;
+  z-index: 10000;
+  font-size: 1em;
+  color: var(--fez-dark);
+  padding: 10px;
+}
+#change-page-btn:hover {
+  color: var(--dark);
 }
 
 .patrick-hand {
